static/src/stylesheets/module/identity/_identity.scss
/* Identity and registration
   ========================================================================== */
.l-header--identity {
    height: 45px;

    @include mq(tablet) {
        height: 113px;
    }
}

.identity-wrapper {
    margin-left: auto;
    margin-right: auto;
    max-width: gs-span(6);
    padding-bottom: $gs-baseline*4;
    padding-top: $gs-baseline*4;

    @include mq(desktop) {
        max-width: gs-span(10);
    }
}

.identity-wrapper--stretched {
    max-width: gs-span(16);
}

.identity-header {
    @include mq(tablet) {
        margin-left: $gs-gutter;
        margin-right: $gs-gutter;
    }
}

@include mq(desktop) {
    .identity-page-header {
        .identity-page-header__title {
            display: table-cell;
            width: gs-span(6);
            vertical-align: top;
            padding-right: $gs-gutter*5;
        }
        .identity-page-header__detail {
            display: table-cell;
            width: gs-span(6);
            vertical-align: top;
            text-align: right;
        }
    }
}

.identity-section {
    border-top: 1px solid $neutral-7;
    box-sizing: border-box;
    margin: (($gs-baseline/3)*5) 0;
    padding-top: (($gs-baseline/3)*5) - 1;

    .identity-section__head {
        @extend %type-5;
    }

    .identity-section__text {
        margin-top: ($gs-baseline/3)*2;
    }
}

.identity-title {
    @include fs-header(4);

    @include mq(desktop) {
        @include fs-header(5, $size-only: true);
    }
}
.identity-title--public-profile {
    @include mq(desktop) {
        float: left;
        white-space: nowrap;
    }
}

.nav--registration {
    margin-top: ($gs-baseline/3)*8;
    font-size: 14px;
    text-align: center;

    @include mq(tablet) {
        font-size: 16px;
    }
}

.nav--registration .nav__item + .nav__item:before {
    content: '\b7';
    margin-left: 4px;
    margin-right: 9px;
}

.social-signin {
    @include clearfix;
    margin: ($gs-baseline*2) 0 (($gs-baseline/3)*4);
    text-align: center;

    @include mq(desktop) {
        margin: ($gs-baseline/3) 0;
    }

    .social-signin__item {
        box-sizing: border-box;
        display: inline-block;
        margin-bottom: ($gs-baseline/3)*2;

        @include mq(tablet) {
            float: left;
        }
    }

    .social-signin__action {
        color: #ffffff;
        display: block;
        font-family: $f-sans-serif-text;
        font-size: 14px;
        padding: 8px 0 9px;
        text-indent: 24px;
        width: 240px;
        position: relative;
        text-align: center;
    }

    .social-signin__action--fb {
        background-color: #3b5998;

        @include mq(tablet) {
            margin-right: $gs-gutter/2;
            width: gs-span(3);
        }
    }

    .social-signin__action--gplus {
        background-color: #dd4b39;

        @include mq(tablet) {
            margin-left: $gs-gutter/2;
            width: gs-span(3);
        }
    }

    .social-signin__icon {
        position: absolute;
        top: 0;
        left: 0;

        svg {
            float: left;
            width: 40px;
            height: 40px;
        }
    }
}

.password-strength-indicator {
    background-color: #ebebeb;
    height: 8px;
    margin-top: 4px;
    position: relative;

    /* Indicator bar */
    &:after {
        bottom: 0;
        content: '';
        display: block;
        left: 0;
        position: absolute;
        top: 0;
    }

    &.score-0:after { width: 20%; background-color: #cc0a00; }
    &.score-1:after { width: 40%; background-color: #ff4b00; }
    &.score-2:after { width: 60%; background-color: #ff8b00; }
    &.score-3:after { width: 80%; background-color: #00e643; }
    &.score-4:after { width: 100%; background-color: #00b334; }

    .password-strength {
        display: inline-block;
        height: 40px;
        margin-top: 14px;
    }
}

.user-avatar,
.user-avatar__image {
    float: left;
    height: 60px;
    width: 60px;
    margin-right: $gs-gutter/2;
}

.user-profile {
    @include mq(tablet) {
        margin-bottom: $gs-baseline*2;
    }
}
.user-profile__about {
    @include fs-textSans(2);
    clear: both;
    margin-top: $gs-baseline;

    @include mq(tablet) {
        margin-left: $gs-gutter*3.5;
        max-width: gs-span(6);
        clear: none;
        margin-top: 0;
    }

    @include mq(desktop) {
        margin-top: $gs-baseline/2;
        float: right;
    }
}
.user-profile__name {
    @include fs-headline(4);

    @include mq(tablet) {
        @include fs-headline(7, true);
    }
}
.user-profile__last-seen,
.user-profile__web-page {
    @include fs-textSans(1);
    display: block;
    color: $neutral-2-contrasted;
    font-weight: normal;
}
.user-profile__web-page {
    @include ellipsis();
    display: block;
    margin-bottom: $gs-baseline/3;
    max-width: 100%;
    word-break: break-all;
}



/* Email Validation
   ========================================================================== */

.form-field.form-field--email-validation {
    position: relative;
    padding-left: 24px;

    .inline-icon {
        position: absolute;
        top: 0;
        left: 0;
    }
}


/* Account Edit page
   ========================================================================== */

.identity-wrapper .tabs {
    .fieldset:first-of-type {
        border-top: 0; // Included so as not to break tabs metaphor
    }
}


/* Public Profile Page
   ========================================================================== */

.identity-public-profile {
    .identity-section__text {
        white-space: pre-line;
    }
}

.tabs--identity {

    .tabs__container {
        max-width: gs-span(12);
        @include mq($until: desktop) {
            margin-top: 5px;
        }
    }

    .tabs__tab--selected {
        border-top-color: $news-accent;
        color: $news-accent;
    }

    @include mq($until: tablet) {
        a {
            padding-top: $gs-baseline/4;
            line-height: 13px !important;
        }
    }
}


/* Email subscriptions
   ========================================================================== */
.email-subscriptions {
    margin-top: $gs-baseline*2;
}
.email-subscription {
    border-top: 1px solid $neutral-5;
    margin-bottom: $gs-baseline*2;
    padding-top: $gs-baseline/3;

    .form__error {
        margin-top: 1.5rem;
        display: block;
        clear: both;
    }
}
.email-subscription--subscribed {
    opacity: .8;
}

.email-subscription__fieldset {
    margin-top: 3em;
    background: lighten($neutral-8,2%);
    border-top: 1px solid $news-main-2;
}

.dropdown--email-subscription .dropdown__label {
  @include fs-bodyHeading(3);
}

.email-subscription__name,
.email-subscription__heading {
    @include fs-headline(3);
    margin-bottom: $gs-baseline;

    @include mq(desktop) {
        @include fs-headline(3, true);
        box-sizing: border-box;
        float: left;
        padding-right: $gs-gutter;
        width: gs-span(4);
    }
}
.email-subscription__description {
    @include fs-bodyCopy(1);

    @include mq(desktop) {
        padding-left: gs-span(4);
    }
}
.email-subscription__meta {
    margin-top: $gs-baseline;
    font-weight: 400;
}

.email-subscription__frequency {
    @include fs-textSans(1);
    float: right;
    margin-bottom: $gs-baseline/1.5;
    margin-top: $gs-baseline/1.5;

    .inline-icon {
        margin-right: $gs-gutter/4;
        vertical-align: text-top;
    }

    @include mq(desktop) {
        float: none;
        margin-top: $gs-baseline;
        padding-left: gs-span(4);
    }
}
.email-subscription__button {
    @include fs-textSans(2);
    background-color: $guardian-brand;
    width: $gs-baseline * 9;
    height: $gs-gutter * 2;
    border-radius: 100px;
    border: 0;
    color: #ffffff;
    cursor: pointer;
    float: left;
    padding: $gs-baseline/1.2 $gs-gutter $gs-baseline/1.5;
    min-width: $gs-baseline * 14;
    white-space: nowrap;
    text-overflow: clip;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    box-sizing: border-box;
    text-align: center;
    display: inline-block;
    display: inline-flex;
    align-items: center;
    justify-content: center;

    &:hover {
        background-color: $guardian-brand-dark;
    }

    &:hover,&:active,&:focus {
        color: #ffffff;
        text-decoration: none;
    }

    @include mq(desktop) {
        .dropdown--email-subscription & {
            float: right;
        }
    }

    .email-subscription--subscribed & {
        background-color: $neutral-2-contrasted;
    }

    &.is-updating-subscriptions {
        display: inherit;
        margin-top: 0;
        font-size: 0;
        background-color: $neutral-5;
        background-repeat: no-repeat;
        background-position: center;
        background-size: 40px;
    }

    &.email-unsubscribe {
        float: none;
        color: $guardian-brand;
        background-color: transparent;
        border: 2px solid $guardian-brand;
    }

    &.email-unsubscribe--confirm {
        color: $error;
        font-weight: bold;
        border: 2px solid $error;
    }
}

.email-unsubscribe-all__label {
    display: inline;

    &.hide {
        display: none;
    }
}

.save__button {
    float: none;
}

/* Delete Account page
   ========================================================================== */

.inline-loading {
    display: inline-block;
    margin-top: 0;
    vertical-align: middle;
}

